# textstat

./: .gitignore  .travis.yml  Makefile  Pipfile  README.md  pyproject.toml
tests/: conftest.py  test_textstat.py
textstat/: stats.py
